# distributed_vehicle_sensor_network_simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
docker/: Dockerfile  docker-compose.yml
include/: controller_service.hpp  dashbord_service.hpp  sensor_client.hpp  sensor_service.hpp
src/: controller_service.cc  dashboard_service.cc  main.cc  sensor_client.cc  sensor_service.cc
src/someip_config/: vsomeip-controller.json  vsomeip-dashboard.json  vsomeip-sensor-client.json  vsomeip-sensor.json
